# loreIDE

./: .gitignore  CLAUDE.md  README.md
.agents/skills/codebase-to-contracts/: .gitignore  SKILL.md  package.json
.claude/: settings.local.json
.planning/: CANVAS-PURPOSE.md  HANDOFF-sync-review-surface.md  PITCH.md  PROJECT.md  REQUIREMENTS.md  ROADMAP-REVISIONS.md  ROADMAP.md  STATE.md  VISION.md
.planning/demo/: DEVPOST.md  HANDOFF-demo-revision.md  HANDOFF-scenario-investigation.md  HANDOFF-scenario-lock.md  SCENARIO-CANDIDATES.md  contract-ide-demo-spec.md  ff0000-thread-verification.md  live-scenario.md  presentation-script.md  reset-procedure.md  runbook-v2.md  runbook.md  scenario-criteria.md
.planning/demo/baselines/: README.md  delete-account-baseline.json  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.planning/review/: COVERAGE_REVIEW.md  TECH_REVIEW.md  UX_REVIEW.md
contract-ide/: .gitignore  .mcp.json  package-lock.json  package.json  vite.config.ts
contract-ide/.claude/: settings.json
contract-ide/.contracts/: 11111111-1111-1111-1111-111111111111.md  22222222-2222-2222-2222-222222222222.md
contract-ide/demo/: reset-demo.sh
contract-ide/mcp-sidecar/: package.json  tsconfig.json
contract-ide/src/: App.tsx  index.css  main.tsx
contract-ide/src-tauri/: .env.example  Cargo.toml  tauri.conf.json
contract-ide/src-tauri/binaries/: section-parser-cli-aarch64-apple-darwin
contract-ide/src-tauri/binaries/section-parser-cli/: Cargo.toml
contract-ide/src-tauri/binaries/section-parser-cli/src/: main.rs  section_parser.rs
contract-ide/src-tauri/capabilities/: default.json
contract-ide/src-tauri/src/: lib.rs  main.rs
contract-ide/src-tauri/src/agent/: mod.rs  prompt_assembler.rs
contract-ide/src-tauri/src/commands/: agent.rs  chat_decisions.rs  chats.rs  cherrypick.rs  constraint_narrowing.rs  contracts.rs  delegate.rs  demo_orchestration.rs  derive.rs  devlog.rs  distiller.rs  drift.rs  graph.rs  inspector.rs  journal.rs  mass_edit.rs  mcp.rs  mod.rs  nodes.rs  pr_review.rs  receipts.rs  reconcile.rs  repo.rs  reset_demo.rs  retrieval.rs  rollup.rs  screenshot.rs  session.rs  sidebar.rs  substrate.rs  substrate_panel.rs  substrate_review.rs  substrate_trust.rs  supersession.rs  sync.rs  validation.rs
contract-ide/src-tauri/src/db/: migrations.rs  mod.rs  scanner.rs
contract-ide/src-tauri/src/delegate/: composer.rs  decisions.rs  mod.rs  plan_review.rs
contract-ide/src-tauri/src/distiller/: mod.rs  pipeline.rs  prompt.rs  state.rs  types.rs
contract-ide/src-tauri/src/drift/: engine.rs  mod.rs  state.rs  watcher.rs
contract-ide/src-tauri/src/retrieval/: candidates.rs  mod.rs  rerank.rs  scope.rs
contract-ide/src-tauri/src/session/: cwd_key.rs  ingestor.rs  mod.rs  state.rs  types.rs  watcher.rs
contract-ide/src-tauri/src/sidecar/: backend_section_validator.rs  frontmatter.rs  jsx_align_validator.rs  mod.rs  section_parser.rs
contract-ide/src-tauri/src/supersession/: candidate_selection.rs  fact_engine.rs  intent_engine.rs  mod.rs  prompt.rs  queries.rs  types.rs  verdict.rs  walker.rs
contract-ide/src-tauri/tests/: cherrypick_atomic_tests.rs  distiller_kernel_regression.rs  fact_supersession_tests.rs  hook_journal_tests.rs  intent_supersession_tests.rs  jsonl_parser_tests.rs  migration_v8_chain_smoke.rs  receipts_substrate_rules_json.rs  reconcile_pin_tests.rs  retrieval_unit_tests.rs  section_parser_tests.rs  session_filter_tests.rs  session_idempotency_tests.rs  substrate_trust_delete.rs  substrate_trust_refine.rs  substrate_trust_restore.rs
contract-ide/src-tauri/tests/fixtures/: contract_api_l3.md  contract_beat1_body.md  contract_ui_l4.md  hook_payload_write.json  hook_transcript_sample.jsonl  kernel_constraints_expected.json  kernel_session_a.jsonl  kernel_session_b.jsonl  mock-claude.sh  session_real.jsonl  session_truncated.jsonl  session_unknown_types.jsonl  test_schema.sql
contract-ide/src-tauri/tests/fixtures/fact_contradictions/: auth_method.json  cache_ttl.json  queue_retry.json  rest_grpc.json  storage_choice.json
contract-ide/src-tauri/tests/fixtures/intent_drift/: evaluation_baseline.json
day0/: FINDINGS.md
day0/check2-hook-payload/: README.md  dump-hook.sh  settings.json
day0/check3-pkg-sqlite/: package-lock.json  package.json
(+482 files in other folders)
