[package]
name = "contract-ide"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "contract_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
window-vibrancy = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tauri-plugin-fs = { version = "2", features = ["watch"] }
tauri-plugin-dialog = "2"
serde_yaml_ng = "0.10"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.11"
hex = "0.4"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio-native-tls"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["sync"] }
pulldown-cmark = "0.13"
thiserror = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
