[package]
name = "section-parser-cli"
version = "0.1.0"
edition = "2021"
description = "stdin→stdout CLI wrapper around the contract section parser for MCP sidecar IPC"

[[bin]]
name = "section-parser-cli"
path = "src/main.rs"

[dependencies]
pulldown-cmark = "0.13"
sha2 = "0.11"
hex = "0.4"
serde_json = "1"
thiserror = "2"
